perubahan abs index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#Chest">Chest</a></li>
         <li><a href="#Back">Back</a></li>
         <li><a href="#Leg">Leg</a></li>
-        <li><a href="#Abs">Abs</a></li>
+        <li><a href="#Abs">perut</a></li>
       </ul>
     </nav>
   </header>
